# VoidAssault

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
VoidAssault/: CMakeLists.txt  VoidAssault.cpp  VoidAssault.h
VoidAssault/src/: merged.txt  reader.py
VoidAssault/src/client/: AudioManager.h  CMakeLists.txt  GameClient.cpp  GameClient.h  NetworkManager.h  ParticleSystem.h  ResourceManager.h  SnapshotManager.h  Theme.h  VirtualJoystick.cpp  VirtualJoystick.h  config.h  main_client.cpp  raygui_wrapper.h
VoidAssault/src/client/scenes/: GameplayScene.cpp  GameplayScene.h  MainMenuScene.cpp  MainMenuScene.h  SettingsScene.cpp  SettingsScene.h
VoidAssault/src/client/vircontrols/: InGameKeyboard.h
VoidAssault/src/common/: CMakeLists.txt  Common.cpp  Common.h  CompressionHelper.h  NetworkPackets.h  PacketSerialization.h
VoidAssault/src/common/enet/: ENetClient.cpp  ENetClient.h  ENetServer.cpp  ENetServer.h
VoidAssault/src/common/net/: Client.h  Message.cpp  Message.h  Server.h
VoidAssault/src/common/serial/: Serialization.cpp  Serialization.h  StreamBuffer.cpp  StreamBuffer.h
VoidAssault/src/common/time/: Time.cpp
VoidAssault/src/engine/: CMakeLists.txt  PhysicsUtils.h  ServerHost.cpp  ServerHost.h  raylib_compatibility.h
VoidAssault/src/engine/ECS/: Artifact.h  Bullet.h  Construct.h  Enemy.h  GameObject.h  PhysicsUtils.h  Player.h
VoidAssault/src/engine/Scenes/: GameScene.h  Scene.h
VoidAssault/src/engine/Utils/: .gitignore  ConfigManager.cpp  ConfigManager.h
VoidAssault/src/server/: CMakeLists.txt  MasterServerLogic.h  main_master.cpp  main_server.cpp
VoidAssault/src/tests/: CMakeLists.txt  test_net.cpp
assets/lang/: lang_en.json  lang_ru.json
